name:                sstats
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/andreyk0/sstats#readme
license:             BSD3
license-file:        LICENSE
author:              Andrey Kartashov
maintainer:          andrey.kartashov@gmail.com
copyright:           2016 Andrey Kartashov
category:            tool
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable sstats
  hs-source-dirs:      .

  main-is:             Main.hs

  other-modules:       Args

  build-depends:       base
                     , attoparsec
                     , bytestring
                     , conduit
                     , conduit-extra
                     , optparse-applicative
                     , scientific
                     , transformers

  default-language:    Haskell2010

  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N -O2

